delegated handling of Types.OTHER to database adapter implementation